# poi_extractor

./: .gitignore  QUICKSTART.md  README.md  config.ini  export_to_garmin.py  extract_pois.py  extract_pois_by_stages.py  extract_pois_simple.py  pyproject.toml  quickstart.ps1  requirements.txt
config/: safety_criteria.yaml
data/: .gitkeep
misc/: AMR_2026_Updated.gpx  example_route.gpx  pois_along_route.csv
scripts/: setup_osrm.ps1  start_osrm.ps1  test_osrm.ps1
src/poi_extractor/: __init__.py
src/poi_extractor/cli/: __init__.py  export.py  extract.py  safety.py
src/poi_extractor/core/: __init__.py  config.py  osm_handlers.py  osrm.py  utils.py
src/poi_extractor/exporters/: __init__.py  garmin.py
src/poi_extractor/extractors/: __init__.py  local.py  simple.py  stages.py
src/poi_extractor/safety/: __init__.py  analyzer.py  criteria.py  models.py  osm_manager.py
